# bank-statement-analyzer

./: .env.example  .gitignore  CLAUDE.md  JOURNAL.org  README.org  main.py  pyproject.toml
.github/workflows/: build.yml  ci.yml
bank_analyzer/: categories.py  categorizer.py  config.py  db.py  export.py  importer.py  money.py  reports.py  rules.py
bank_analyzer/ui/: app.py  categories_view.py  constants.py  help_view.py  import_view.py  reports_view.py  rules_view.py  settings_view.py  transactions_view.py
bank_analyzer/ui/help/: help.en.html  help.pl.html
docs/: help.en.org  help.pl.org
scripts/: build-assets.py  demo.py  extract-strings.py  seed.py
tests/: conftest.py  test_categorizer.py  test_db.py  test_export.py  test_importer.py  test_money.py  test_reports.py  test_ui_export.py
tests/fixtures/: lista_operacji_mbank.csv  lista_operacji_pko_bp_1.csv  lista_operacji_pko_bp_2.csv
translations/: pl.qm  pl.ts
