[project]
name = "bank-statement-analyzer"
version = "0.1.0"
description = "Analyze bank statements from CSV files, categorize transactions, and report spending."
requires-python = ">=3.10"
dependencies = [
	"pyside6>=6.11.0",
	"python-dotenv",
]

[dependency-groups]
dev = [
	"pyinstaller>=6.19.0",
	"pytest",
	"ruff>=0.15.10",
]

[tool.hatch.build.targets.wheel]
packages = ["bank_analyzer"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pyright]
venvPath = "."
venv = ".venv"
exclude = [".venv"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM", "PT"]

[tool.ruff.lint.per-file-ignores]
"tests/test_importer.py" = ["E501"] # allow long descriptions
